<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Studieux</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_cours">CoursActivity</string>
    <string name="title_activity_periode_add">PeriodeAddActivity</string>

    <!-- Ecran des devoirs -->
    <string name="DevoirsTitle">Devoirs :</string>

    <!-- Ecran ajout d'un devoir -->
    <string name="DevoirAddNomLabel">Nom</string>
    <string name="DevoirAddNomHint">Exo Maths, DM Histoire...</string>
    <string name="DevoirAddDescLabel">Description</string>
    <string name="DevoirAddDescHint">Ex 1 p 337...</string>
    <string name="DevoirAddDeadlineLabel">Date de rendu</string>
    
    <!-- Ecran ajout d'une période -->
    <string name="PeriodeText">Nom de la période :</string>
    <string name="PeriodeTextExample">Par exemple \&quot;Semestre 1\&quot;</string>
    <string name="PeriodeNameHint">Période</string>
    <string name="periodeDebutText">Date de début :</string>
    <string name="periodeFinText">Date de fin :</string>

    <!-- Ecran ajout d'une matière -->
    <string name="MatiereText">Nom de la matière :</string>
    <string name="MatiereNameHint">Matière</string>
    <string name="MatiereCoefficientText">Coefficient :</string>
    <string name="buttonEnregistrer">Enregistrer</string>
    <string name="title_activity_periode">PeriodeActivity</string>
    <string name="menu_add">Ajout</string>
    <string name="title_activity_matiere">MatiereActivity</string>
    <string name="title_activity_matiere_add">MatiereAdd</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note_add">NoteAddActivity</string>
    <string name="title_activity_cours_add">CoursAddActivity</string>

    <!-- Ecran ajout d'un cours -->
    <string name="CoursAddtypecourshint">Amphi, TD, TP...</string>
    <string name="CoursAddsallecourshint">Lieu, salle...</string>
    <string name="title_activity_liste_notes">ListeNotesActivity</string>
    <string name="title_activity_devoirs">DevoirsActivity</string>
    <string name="title_activity_devoirs_add">DevoirsAddActivity</string>

</resources>